--- a/en/p/palet.803129.wikitext
+++ b/en/p/palet.803129.wikitext
@@ -13,6 +13,26 @@
 
 ----
 
+==Catalan==
+
+===Etymology===
+{{af|ca|pal|-et}}
+
+===Pronunciation===
+* {{ca-IPA}}
+
+===Noun===
+{{ca-noun|m}}
+
+# {{diminutive of|ca|pal||pole}}
+# {{lb|ca|geology}} [[pebble]]
+# [[pallet]] {{gloss|portable platform}}
+
+===Further reading===
+* {{R:IEC2}}
+
+----
+
 ==Danish==
 
 ===Etymology===
