--- a/en/t/type system.775118.wikitext
+++ b/en/t/type system.775118.wikitext
@@ -5,6 +5,7 @@
 {{en-noun}}
 
 # {{lb|en|computing}} A way [[programming language]] classifies [[value]]s and [[expression]]s into [[data type|types]], how it can manipulate those types and how they interact.
+#* {{quote-journal|en|url=https://www.technologyreview.com/2015/04/02/168469/toolkits-for-the-mind/|title=Toolkits for the Mind|work=MIT Technology Review|author=James Somers|date=2015-04-02|passage=OCaml’s big selling point is its “'''type system''',” which is something like Microsoft Word’s grammar checker, except that instead of just putting a squiggly green line underneath code it thinks is wrong, it won’t let you run it.}}
 
 ====Derived terms====
 * {{l|en|nominative type system}}
