--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -102,6 +102,7 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 * Plautdietsch: {{t|pdt|faustnämen}}, {{t|pdt|jriepen}}
 * Polish: {{t+|pl|chwycić|pf}}, {{t+|pl|złapać}}, {{t+|pl|chwytać|impf}}, {{t+|pl|łapać|impf}}
 * Portuguese: {{t+|pt|agarrar}}, {{t+|pt|capturar}}, {{t+|pt|apanhar}}
+* Romagnol: {{t|rgn|abranchêr}}, {{t|rgn|branchêr}}
 * Russian: {{t+|ru|захва́тывать|impf}}, {{t+|ru|захвати́ть|pf}}, {{t+|ru|схва́тывать|impf}}, {{t+|ru|схвати́ть|pf}}
 * Sanskrit: {{t+|sa|घिण्णते}}
 * Shan: {{t+|shn|ယွပ်း}}
