--- a/en/v/vortical.855979.wikitext
+++ b/en/v/vortical.855979.wikitext
@@ -29,6 +29,7 @@ From (the stem of) {{etyl|la|en}} {{m|la|vortex}} {{suffix|en||al}}.
 {{trans-top|pertaining to a vortex}}
 * Arabic: {{t-needed|ar}}
 * Armenian: {{t+|hy|մրրկային|sc=Armn}}
+* Bulgarian: {{t|bg|вихров}}
 * Chinese:
 *: Mandarin: {{t|cmn|[[漩渦]][[的]]}}, {{t|cmn|[[漩涡]][[的]]|tr=xuánwō de}}
 * Czech: {{t-needed|cs}}
