--- a/en/m/moonless.720230.wikitext
+++ b/en/m/moonless.720230.wikitext
@@ -20,6 +20,7 @@ From {{suffix|en|moon|less}}.
 {{trans-mid}}
 * Italian: {{t+|it|illune}}
 * Latin: {{t|la|illūnis}}
+* Polish: {{t+|pl|bezksiężycowy}}
 {{trans-bottom}}
 
 {{c|en|Astronomy}}
