--- a/en/a/amai.4232.wikitext
+++ b/en/a/amai.4232.wikitext
@@ -1,4 +1,23 @@
 {{also|amaí}}
+==Basque==
+
+===Pronunciation===
+{{eu-IPA}}
+
+===Noun===
+{{eu-noun|in}}
+
+# [[end]], [[ending]]
+
+====Declension====
+{{eu-decl-inanim}}
+
+===Further reading===
+* {{R:EH}}
+* {{R:OEH}}
+
+----
+
 ==Dutch==
 
 ===Etymology===
