/* Noun */deprecated labels, replaced: {{lb|en|historical|usually plural}} → {{lb|en|historical|usually|in the plural}} using [[Project:AWB|AWB]] <robing#66665880>

--- a/en/r/robing.720156.wikitext
+++ b/en/r/robing.720156.wikitext
@@ -9,7 +9,7 @@
 {{en-noun|~}}
 
 # The act of putting on ceremonial clothing.
-# {{lb|en|historical|usually plural}} The [[trimming]]s around the [[neck]] and [[bodice]] of a [[gown]].
+# {{lb|en|historical|usually|in the plural}} The [[trimming]]s around the [[neck]] and [[bodice]] of a [[gown]].
 
 ===Anagrams===
 * {{anagrams|en|a=bginor|Boring|boring|orbing}}
