--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -215,7 +215,7 @@ From {{der|de|en|CD}}.
 # [[#English|CD]] ([[compact disc]])
 
 ====Declension====
-{{de-ndecl|f,s:'s:-}}
+{{de-ndecl|f,-:s:'s[nonstandard, proscribed]}}
 
 ===Further reading===
 * {{R:DWDS}}
