--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -15,8 +15,8 @@ Via {{der|en|fr|-}} from {{der|en|la|maximum}}.
 {{en-noun|maxima|s}}
 
 # The [[high|highest]] [[limit]]
-#* {{rfdatek|en|P. Colquhoun}}
-#*: Good legislation is the art of conducting a nation to the '''maximum''' of happiness, and the minimum of misery.
+#* '''1806''', P. Colquhoun, ''A Treatise on Indigence''
+#*: This is the fundamental principle of good legislation. It is the art of conducting a nation to the '''maximum''' of happiness and the minimum of misery
 # {{lb|en|mathematics}} The [[great]]est [[value]] of a [[set]] or other mathematical structure, especially the [[global maximum]] or a [[local maximum]] of a [[function]]
 # {{lb|en|analysis}} An [[upper]] [[bound]] of a set which is also an element of that set
 # {{lb|en|statistics}} The largest value of a [[batch]] or [[sample]] or the upper bound of a [[probability distribution]]
