t+mk:[[одбројува]] ([[WT:EDIT|Assisted]]) <count down#66704033>

--- a/en/c/count down.856261.wikitext
+++ b/en/c/count down.856261.wikitext
@@ -25,6 +25,7 @@
 {{trans-mid}}
 * German: {{t|de|herunterzählen}}
 * Japanese: {{t|ja|秒読み|alt=秒読みする|tr=byōyomi suru}}
+* Macedonian: {{t|mk|одбројува}}
 * Polish: {{t|pl|odliczać|impf}}, {{t|pl|odliczyć|pf}}
 * Portuguese: {{t|pt|[[fazer]] ([[a]]) [[contagem regressiva]]}}
 * Spanish: {{t-needed|es}}
@@ -38,6 +39,7 @@
 * French: {{t+|fr|décompter}}
 {{trans-mid}}
 * German: {{t+|de|zählen}}
+* Macedonian: {{t|mk|одбројува}}
 * Polish: {{t|pl|odliczać}}
 * Portuguese: {{t|pt|contar os dias}}
 * Spanish: {{t-needed|es}}
