--- a/en/c/collective security.803561.wikitext
+++ b/en/c/collective security.803561.wikitext
@@ -15,5 +15,6 @@
 * Irish: {{t|ga|slándáil chomhchoiteann|f}}
 {{trans-mid}}
 * Korean: {{t|ko|집단 안전}}
+* Polish: {{t|pl|bezpieczeństwo zbiorowe|n}}
 * Romanian: {{t+|ro|securitate colectivă|f}}
 {{trans-bottom}}
