t+acw:[[خنزير]] ([[WT:EDIT|Assisted]]) <pig#66726884>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -112,6 +112,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Arabic: {{tt|ar|خِنْزِير|m}}, {{tt|ar|حَلُوف|m}}
 *: Egyptian Arabic: {{tt|arz|خنزير|m|tr=ḵanzīr}}, {{tt|arz|حلوف|m|tr=ḥalūf}}
 *: Gulf Arabic: {{tt|afb|خنزير|m|tr=ḵanzīr}}
+*: Hijazi Arabic: {{t|acw|خَنْزير|m|tr=ḵanzīr}}
 *: Moroccan Arabic: {{tt|ary|حلوف|tr=ḥallūf}}, {{tt|ary|خنزير|tr=ḵanzīr}}
 *: North Levantine Arabic: {{tt|apc|خنزير|m|tr=ḵanzīr}}
 * Aragonese: {{t|an|cochín}}, {{t|an|tocín}}
