--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -74,9 +74,12 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 #*: She's good '''at''' playing musical instruments, singing and dancing, chess, calligraphy, and painting.
 # {{lb|en|Ireland|stressed pronunciation}} Bothering, irritating, causing discomfort to
 #* '''1995''' Keith Wood, quoted in David Hughes, "[http://www.independent.co.uk/sport/rugby-union-wood-oddson-to-take-one-against-the-head-1568622.html Wood odds-on to take one against the head]", in ''The Independent'' (London) 18 January:
-#*: I think `Jesus, my back is '''at''' me'. Then I get the ball. Off you go for 10 yards and you don't feel a thing. Then you stop and think: `Jesus, it's '''at''' me again'[.]
+#*: I think 'Jesus, my back is '''at''' me'. Then I get the ball. Off you go for 10 yards and you don't feel a thing. Then you stop and think: `Jesus, it's '''at''' me again'[.]
 #* '''2014''' Marian Keyes "[https://web.archive.org/web/20140203045758/http://www.mariankeyes.com/newsletter/January2014-2?forumboardid=26&forumtopicid=26 Antarctic Diary - Part 2]" personal website (January 2014):
 #*: He seems to be saying. “Ah, go on, you’re making the other lads feel bad.” But the 4th fella says, “No. Don’t be '''‘at’''' me. I’m just not in the form right now, I’ll stay where I am, thanks.”
+# {{lb|en|UK|Commonwealth|especially finance, indicating time}} {{q|also '''as at'''; before dates}} On a particular date.
+#* '''n.d.''', quoted in ''Longmans Business Dictionary'':
+#*: balance '''as at''' 20th March 1999
 
 =====Usage notes=====
 * ''He threw the ball to me'' &mdash; (so I could catch it).
