--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -32,13 +32,14 @@ From {{inh|en|enm|coppe}}, from {{inh|en|ang|*coppe}}, as in {{m|ang|ātorcoppe|
 #: {{uxi|en|When caught, he would often '''cop''' a vicious blow from his father.}}
 # {{lb|en|transitive|trainspotting|slang}} To see and record a [[railway]] [[locomotive]] for the first time.
 # {{lb|en|transitive}} To [[steal]].
+#* {{quote-song|en|author={{w|Billie Eilish}} and {{w|Finneas O'Connell}}|title={{w|Copycat (Billie Eilish song)|Copycat}}|album={{w|Don't Smile at Me}}|year=2017|artist=Billie Eilish|text=Copycat tryna '''cop''' my manner / Watch your back when you can't watch mine / Copycat tryna '''cop''' my glamor / Why so sad, bunny?  Can't have mine}}
 # {{lb|en|transitive}} To [[adopt]].
-#: ''No need to '''cop''' a [['tude]] with me, junior.''
+#: {{ux|en|No need to '''cop''' a [['tude]] with me, junior.}}
 # {{lb|en|transitive}} To [[earn]] by bad behavior.
 #* {{quote-song|en|year=1992|lyricist={{w|Roxanne Shanté}}|title=Straight Razor| album=The Bitch Is Back| passage=You bust in the house, another bitch’s mouth is suckin on your man's dick<br/>What do you do: think straight? Or do you run to the back,<br/>Open the trunk to the nickel-plate 38?<br/>“Wait wait, baby, please!”<br/>That's the shit he's '''coppin''' when he’s down on both his knees}}
 # {{lb|en|intransitive|usually with “to”|slang}} To [[admit]], especially to a crime or [[wrongdoing]].
-#: ''I already '''copped''' to the murder. What else do you want from me?''
-#: ''Harold '''copped''' to being known as "Dirty Harry".''
+#: {{ux|en|I already '''copped''' to the murder. What else do you want from me?}}
+#: {{ux|en|Harold '''copped''' to being known as "Dirty Harry".}}
 #* {{quote-book|en|title=Mr. Paradise|page=295| author={{w|Elmore Leonard}}| year=2005| passage=He shot a guy in a bar on Martin Luther King Day and '''copped''' to first-degree manslaughter}}
 # {{lb|en|transitive|slang}} Of a [[pimp]]: to recruit a [[prostitute]] into the [[stable]].
 #* {{quote-book|en|year_published=2009|year=1967|author={{w|Iceberg Slim}}|title=Pimp|page=90|passage=I said, 'Tell your tricks to call you here.'<br>She laid the bearskin and freaked the joint off with her lights and other crap. Except for the fake stars it was a fair mock-up of her pad where I had '''copped''' her.}}
