Added quotation <beetling#67016157>

--- a/en/b/beetling.855679.wikitext
+++ b/en/b/beetling.855679.wikitext
@@ -16,5 +16,6 @@
 # Jutting or protruding, especially of a person's brows.
 #* {{quote-book|1=en|year=1887|author=H. Rider Haggard|authorlink=H. Rider Haggard|title=She: A History of Adventure|url=http://www.gutenberg.org/files/3155/3155-0.txt|passage=As I anticipated, we had passed right through the precipice, and were now on the farther side, and immediately beneath its '''beetling''' face.}}
 #* {{quote-book|1=en|year=1912|author=Sir Arthur Conan Doyle|authorlink=Arthur Conan Doyle|title=The Lost World|url=http://www.gutenberg.org/cache/epub/139/pg139.txt|passage=The '''beetling''' head of the cliff projected over the cane-brake.}}
+#* {{quote-book|en|author=Stewart Alsop|authorlink=Stewart Alsop|chapter=How They Got that Way: Nixon|title=Nixon & [[w:Nelson Rockefeller|Rockefeller]]: A Double Portrait|location=Garden City, N.Y.|publisher=[[w:Doubleday (publisher)|Doubleday & Company]]|year=1960|page=124|pageurl=https://archive.org/details/nixonrockefeller00also/page/124/mode/1up|oclc=418753|passage=Put a clay pipe in [[w:Richard Nixon|[Richard] Nixon]]’s mouth and a hod on his shoulder or a shillelagh in his hand, and there, complete with '''beetling''' brows and uptilted nose, is the original of the old cartoon stereotype of the fighting Irishman—the Irishman of the draft riots or of ''Punch''’s version of the Sinn Feiner.}}
 #* '''1995''', Iain Banks, ''Whit''
 #*: If the fire, with its giant black kettle swung over the flames, is our never-extinguished shrine, then the stove is an altar. It is habitually tended by my step-aunt Calliope (usually known as Calli), a dark, stocky, dense-looking woman with '''beetling''' black brows and a tied-back sheaf of thick hair, still raven-black without a trace of silver after her forty-four years.
