--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -214,6 +214,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 * Ossetian: {{t-needed|os}}
 * Paipai: {{t|ppi|xlo}}
 * Pashto: {{t|ps|سوۍ|tr=saway|sc=ps-Arab}}
+* Pawnee: {{t|paw|párus}}
 * Persian: {{t+|fa|خرگوش|tr=xarguš|sc=fa-Arab}}
 * Pintupi-Luritja: {{t-needed|piu}}
 * Pitjantjatjara: {{t|pjt|malu}}
