--- a/en/o/ostracum.741771.wikitext
+++ b/en/o/ostracum.741771.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|NL.|en}} {{m|la|ostracum}}, from {{etyl|grc|en}} {{m|grc|ὄστρακον||pottery fragment; shell}}.
+From {{bor|en|NL.|ostracum}}, from {{der|en|grc|ὄστρακον||pottery fragment; shell}}.
 
 ===Noun===
 {{en-noun|ostraca}}
