t+pox:[[ai̯]] ([[WT:EDIT|Assisted]]) <at#67062771>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -148,6 +148,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 *: Norwegian Bokmål: {{t+|nb|på}}
 *: Norwegian Nynorsk: {{t|nn|på}}
 * Persian: {{t+|fa|در|tr=dar}}
+* Polabian: {{t|pox|ai̯}}
 * Polish: {{t+|pl|w}}, {{t+|pl|u}}, {{t+|pl|przy}}
 * Portuguese: {{t+|pt|em}} (not distinct from the senses expressed in English by ''in'' or ''on''), {{t+|pt|por}}, {{t+|pt|a}} (unproductive; only used with a few words, as in ''à mesa'': at the table)
 * Rapa Nui: {{t|rap|i}}
