t+mt:[[pastard]] ([[WT:EDIT|Assisted]]) <cauliflower#67078529>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -77,6 +77,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Lithuanian: {{t|lt|žiedinis kopūstas|m}}, {{t|lt|žiedbastučiai|m-p}}
 * Macedonian: {{t|mk|карфио́л|m}}
 * Malay: {{t|ms|kubis bunga}}
+* Maltese: {{t|mt|pastard|m}}
 * Maori: {{t|mi|kareparāoa}}, {{t|mi|pūputi}}
 * Mongolian: {{t|mn|цэцэгт байцаа|sc=Cyrl}}
 * Navajo: {{t|nv|chʼil łigaii}}, {{t|nv|sęęschʼil}}
