--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -1,7 +1,7 @@
 {{also|Island|Ísland|Īsland|Island'}}
 ==English==
 {{wikipedia|lang=en}}
-[[Image:CyprusFromTheISS.jpg|thumb|right|[[Cyprus]] island from space.]]
+[[Image:Island_near_Fiji.jpg|thumb|right|An island.]]
 
 ===Alternative forms===
 * {{l|en|iland}} {{qualifier|archaic}}
