--- a/en/r/revest.855934.wikitext
+++ b/en/r/revest.855934.wikitext
@@ -5,17 +5,17 @@ From {{etyl|xno|en}} {{m|fro|revestir}}, {{m|en|revestre}} et al., {{etyl|frm|en
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/ɹiːˈvɛst/}}
+{{rfap|en}}
 
 ===Verb===
 {{en-verb}}
 
 # {{lb|en|obsolete}} To [[dress]] (a priest or other religious figure) in ritual garments, especially to celebrate Mass or another service.
 # To [[reclothe]]; to dress again.
-#* '''1590''', Edmund Spenser, ''The Faerie Queene'', II.i:
-#*: Her nathelesse / Th'enchaunter finding fit for his intents, / Did thus '''reuest''', and deckt with due habiliments.
+#* {{RQ:Spenser Faerie Queene|II|i|passage=Her nathelesse / Th'enchaunter finding fit for his intents, / Did thus '''reuest''', and deckt with due habiliments.}}
 # To return (property) to a former owner; to [[reinstate]]
 # To invest again with possession or office.
-#: ''to '''revest''' a magistrate with authority''
+#: {{ux|en|to '''revest''' a magistrate with authority}}
 # {{lb|en|intransitive}} To take effect again.
 
 ===Anagrams===
