--- a/en/r/rosier.746684.wikitext
+++ b/en/r/rosier.746684.wikitext
@@ -1,6 +1,8 @@
 {{also|Rosier}}
 ==English==
 
+{{rfp|en}}
+
 ===Etymology 1===
 
 ====Adjective====
@@ -15,12 +17,9 @@ From {{der|en|fro|rosier}}. {{doublet|en|rosary}}.
 {{en-noun}}
 
 # {{lb|en|archaic}} [[rosebush]]
-#* '''1548''', {{w|Edward Hall}}, ''The Union of the Two Noble and Illustre Families of Lancastre and Yorke'':
-#*: on the top ſtood five trees: the firſt was an olive tree, on which hanged a ſhield of the armes of the church of Rome; the ſecond was a pyne aple tree, with the arms of the emperor; the third was a '''roſyer''', with the armes of England; the fourth a braunche of lylies, bearing the armes of France; and the fifth a pomegranet tree, bearing the armes of Spayn
-#* '''1590''', {{w|Edmund Spenser}}, ''{{w|The Faerie Queene}}'', book 2, canto 9, verse 19:
-#*: Ne other tire ſhe on her head did weare,<br>But crowned with a garland of ſweete '''roſiere'''.
-#* '''1801''', {{w|Robert Southey}}, ''{{w|Thalaba the Destroyer}}'':
-#*: The single nightingale<br>Perch’d in the '''rosier''' by, so richly ton’d,<br>That never from that most melodious bird,<br>Singing a love-song to his brooding mate,<br>Did Thracian shepherd by the grave<br>Of Orpheus hear a sweeter melody
+#* {{RQ:Edward Hall Lancastre & Yorke|text=on the top ſtood five trees: the firſt was an olive tree, on which hanged a ſhield of the armes of the church of Rome; the ſecond was a pyne aple tree, with the arms of the emperor; the third was a '''roſyer''', with the armes of England; the fourth a braunche of lylies, bearing the armes of France; and the fifth a pomegranet tree, bearing the armes of Spayn}}
+#* {{RQ:Spenser Faerie Queene|2|9|19|text=Ne other tire ſhe on her head did weare,<br>But crowned with a garland of ſweete '''roſiere'''.}}
+#* {{RQ:Southey Thalaba|text=The single nightingale<br>Perch’d in the '''rosier''' by, so richly ton’d,<br>That never from that most melodious bird,<br>Singing a love-song to his brooding mate,<br>Did Thracian shepherd by the grave<br>Of Orpheus hear a sweeter melody}}
 
 ===Anagrams===
 * {{anagrams|en|a=eiorrs|Rories}}
