--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -98,7 +98,6 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Kyrgyz: {{t|ky|кашкулак}}
 * Ladin: {{t|lld|tas|?}}
 * Lakota: {{t|lkt|ȟoká}}
-{{trans-mid}}
 * Latin: {{t|la|mēlēs|f}}, {{t+|la|taxō|m}} {{qualifier|Late}}
 * Latvian: {{t+|lv|āpsis|m}}
 * Laz: {{t|lzz|მუმჩქვი}}
@@ -106,15 +105,19 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Low German:
 *: Dutch Low Saxon: {{t-needed|nds-nl}}
 *: German Low German: {{t|nds-de|Tacks|m}}, {{t|nds-de|Daks}}
+{{trans-mid}}
 * Macedonian: {{t|mk|ја́зовец|m}}
 * Malay: {{t|ms|bejar}}
 * Manchu: {{t|mnc|ᡩᠣᡵᡤᠣᠨ}}
 * Manx: {{t|gv|broc|m}}
 * Maori: {{t|mi|pateri}}
+* Mari:
+*: Eastern Mari: {{t|chm|нерге}}
+*: Western Mari: {{t|mrj|нергӹ}}
 * Mazanderani: {{t|mzn|گورشکو|tr=gureško}}
 * Mingrelian: {{t|xmf|მუნჩქვი}}
 * Mongolian: {{t+|mn|дорго}}
-* Nanai: {{t|gld|дорон}}
+* Nanai: {{t|gld|дорон}}, {{t|gld|оё̄н}}
 * Navajo: {{t|nv|nahashchʼidí}}
 * Norman: {{t|nrf|blaireau|m}} {{qualifier|Jersey}}
 * Norwegian:
@@ -135,6 +138,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Sardinian: {{t|sc|tassu|?}}, {{t|sc|cane de ribu|?}}
 * Saterland Frisian: {{t|stq|taks|?}}
 * Scottish Gaelic: {{t|gd|broc|m}}
+* Selkup: {{t|sel|нарг}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|ја̏завац|m}}
 *: Roman: {{t+|sh|jȁzavac|m}}
@@ -159,6 +163,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Turkish: {{t+|tr|porsuk}}
 * Turkmen: {{t|tk|torsuk}}
 * Tuvan: {{t|tyv|морзук}}
+* Udmurt: {{t|udm|нарды}}
 * Ukrainian: {{t+|uk|борсу́к|m}}
 * Uyghur: {{t|ug|بورسۇق}}
 * Uzbek: {{t+|uz|boʻrsiq}}
