t+gl:[[xogar]] t+gl:[[arriscar]] ([[WT:EDIT|Assisted]]) <gamble#67136176>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -154,6 +154,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 {{trans-top|''(transitive)'' to risk something for potential gain}}
 * Dutch: {{t|nl|[[op het spel]] [[zetten]]}}, {{t+|nl|vergokken}}, {{t+|nl|wagen}}
 * Finnish: {{t+|fi|vaarantaa}}
+* Galician: {{t|gl|xogar}}, {{t|gl|arriscar}}
 * German: aufs {{t+|de|Spiel|n}} {{t+|de|setzen}}, {{t+|de|hasardieren}}, {{t+|de|wagen}}
 * Hungarian: {{t+|hu|kockáztat}}, {{t|hu|kockára tesz}}
 * Interlingua: {{t|ia|[[poner]] in [[risco]]}}
