--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -89,7 +89,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Czech: {{t+|cs|riskovat}}
 * Dutch: {{t+|nl|gokken}}
 * French: {{t+|fr|parier}}, {{t+|fr|hasarder}}
-* Galician: {{t|gl|apostar}}, {{t+|gl|aventurar}}, {{t|gl|arrenegar}}, {{t|gl|arriscar}}
+* Galician: {{t|gl|apostar}}, {{t+|gl|aventurar}}, {{t|gl|arriscar}}
 * Georgian: {{t|ka|გარისკვა}}
 * German: {{t+|de|riskant}} {{t+|de|spielen}}, {{t+|de|spekulieren}}, {{qualifier|slang}} {{t+|de|zocken}}, {{t+|de|hasardieren}}
 * Greek: {{t+|el|στοιχηματίζω}}
@@ -124,7 +124,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Dutch: {{t+|nl|gokken}}, {{t|nl|[[kansspel]]en [[bedrijven]]}}
 * Esperanto: {{t+|eo|veti}}, {{t|eo|vetludi}}
 * Finnish: {{t|fi|uhkapelata}}
-* Galician: {{t|gl|apostar}}, {{t|gl|arrenegar}}
+* Galician: {{t|gl|apostar}}
 * Georgian: {{t|ka|აზარტული თამაშების თამაში}}
 * German: {{t+|de|wetten}}, {{t+|de|spielen}}, {{qualifier|slang}} {{t+|de|zocken}}
 * Hebrew: {{t+|he|הימר|tr=himér}}
