--- a/en/r/revest.855934.wikitext
+++ b/en/r/revest.855934.wikitext
@@ -5,7 +5,7 @@ From {{etyl|xno|en}} {{m|fro|revestir}}, {{m|en|revestre}} et al., {{etyl|frm|en
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/ɹiːˈvɛst/}}
-{{rfap|en}}
+* {{audio|en|LL-Q1860 (eng)-Vealhurl-revest.wav ‎|Audio (UK)}}
 
 ===Verb===
 {{en-verb}}
