--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -57,7 +57,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 |Green Island|half-island|Hayling Island|heat island|high island|Holy Island
 |interisland|Island County
 |islander|island dispenser|island display|island-hop|island maze|island platform|island position|island site|island state|island universe|islandwide|islandy|Kangaroo Island
-|kitchen island|Little Island|Long Island|low island|Mersea Island|no man is an island
+|kitchen island|Little Island|Long Island|low island|Merritt Island|Mersea Island|no man is an island
 |Norfolk Island|North Island|Puget Island|Rhode Island|Rock Island
 |safety island|security island|Island|sea-island|South Island|Stewart Island|St. Lawrence Island
 |tidal island|traffic island|Valentia Island|Vancouver Island|Wake Island|Wake's Island|White Island}}
