t+ml:[[ഊതുക]] ([[WT:EDIT|Assisted]]) <blow#67138561>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -317,6 +317,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 
 {{trans-top|To force a current of air upon with the mouth, or by other means}}
 * French: {{t+|fr|souffler}}
+* Malayalam: {{t+|ml|ഊതുക}}
 * Maori: {{t|mi|pūkeru}}
 * Middle English: {{t|enm|blowen}}
 {{trans-mid}}
@@ -331,6 +332,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * French: {{t+|fr|jouer|alt=jouer (de)}}, {{t+|fr|souffler|alt=souffler (dans)}}
 * Hebrew: {{t+|he|תָּקַע|tr=taká'}}
 * Irish: {{t|ga|séid}}
+* Malayalam: {{t+|ml|ഊതുക}}
 * Mongolian: {{t+|mn|үлээх}}
 * Ngazidja Comorian: {{t|zdj|pvuzia|alt=upvuzia}}
 * Old English: {{t|ang|blāwan}}
