--- a/en/k/kleptocrat.855012.wikitext
+++ b/en/k/kleptocrat.855012.wikitext
@@ -9,7 +9,7 @@
 ===Noun===
 {{en-noun}}
 
-# A ruling figure in a [[kleptocracy]].
+# A ruling figure in a [[kleptocracy]]. [[Category:en:Corruption]]
 #* '''1997''', Diamond Jered, '' Guns, Germs, and Steel '', W. W. Norton & Co, page 276,
 #*: The difference between a '''kleptocrat''' and a wise statesman is merely on of degree: a matter of just how large a percentage of the tribute extracted from producers is retained by the elite, and how much the commoners appreciate the public uses to which the redistributed tribute is put.
 
