--- a/en/m/mill dam.720303.wikitext
+++ b/en/m/mill dam.720303.wikitext
@@ -13,8 +13,7 @@
 {{en-noun}}
 
 # A [[dam]] constructed across a [[river]] or [[stream]] to raise the water level so that it can turn a [[millwheel]]; also, the [[millpond]] so created.
-#* '''1596''', {{w|Edmund Spenser}}, ''The Faerie Queene'', V.11:
-#*: the which, once being brust, / Like to a great '''Mill-damb''' forth fiercely gusht, / And powred out of her infernall sinke / Most ugly filth […].
+#* {{RQ:Spenser Faerie Queene|passage=the which, once being brust, / Like to a great '''Mill-damb''' forth fiercely gusht, / And powred out of her infernall sinke / Most ugly filth […].|5|11}}
 #* '''1833''', {{w|Alfred, Lord Tennyson}}, ‘The Miller's Daughter’:
 #*: Or from the bridge I lean'd to hear / The '''milldam''' rushing down with noise, / And see the minnows everywhere / In crystal eddies glance and poise […].
 #* '''1960''', AM Holt, translating {{w|Gottfried Keller}}, ''Green Henry'', Calder Publications 2010, p. 456:
