/* Noun */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <accusement#67147719>

--- a/en/a/accusement.34083.wikitext
+++ b/en/a/accusement.34083.wikitext
@@ -12,8 +12,7 @@ From {{etyl|frm|en}} {{m|frm|acusement}}; later uses reformed from {{suffix|en|a
 # {{lb|en|now|_|rare}} An [[accusation]]. {{defdate|from 14th c.}}
 #* '''c. 1390''', {{w|Geoffrey Chaucer}}, ''Troilus & Criseyde'', IV.50:
 #*: Than þenk I þis were here '''accusement'''.
-#* '''1596''', {{w|Edmund Spenser}}, ''The Faerie Queene'', V.9:
-#*: He gan t'efforce the evidence anew, / And new '''accusements''' to produce in place […].
+#* {{RQ:Spenser Faerie Queene|passage=He gan t'efforce the evidence anew, / And new '''accusements''' to produce in place […].|5|9}}
 
 ===References===
 * {{R:Webster 1913}}
