--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -14,7 +14,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 ====Pronunciation====
 * {{IPA|en|/ˈpɪɡ/}}
 * {{audio|en|en-us-pig.ogg|Audio (US)}}
-* {{audio|en|en-au-pig.ogg|Pornhub Intro (AU)}}
+* {{audio|en|en-au-pig.ogg|Audio (AU)}}
 * {{rhymes|en|ɪɡ|s=1}}
 
 ====Noun====
@@ -43,7 +43,6 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 # {{lb|en|derogatory|slang}} A [[dirty]] or [[slovenly]] person.
 #: {{ux|en|He was a '''pig''' and his apartment a pigpen; take-away containers and pizza boxes in a long, moldy stream lined his counter tops.}}
 # {{lb|en|derogatory}} A very [[obese]] person.
-#:{{lb|en|pussyclart|niggas}} Your [[dirty]] smelly pussy belongs to me.
 #: {{syn|en|Thesaurus:fat person}}
 # {{senseid|en|police officer}} {{lb|en|now|chiefly|US|UK|Australia|derogatory|slang}} A [[police officer]]. {{defdate|From ''ante'' 1785.}}
 #: {{syn|en|Thesaurus:police officer}}
