t+pt:[[estafe]] ([[WT:EDIT|Assisted]]) <staff#67149076>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -232,6 +232,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 {{trans-top|mixture of plaster and fibre}}
 * Finnish: {{t|fi|kuitukipsi}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|estafe|m}}
 {{trans-bottom}}
 
 {{trans-top|pole, stick, or wand borne as an ensign of authority}}
