t+gl:[[faldriqueira]] ([[WT:EDIT|Assisted]]) <money bag#67151907>

--- a/en/m/money bag.720269.wikitext
+++ b/en/m/money bag.720269.wikitext
@@ -20,7 +20,7 @@
 * Chinese:
 *: Mandarin: {{t+|cmn|錢袋|sc=Hani}}, {{t+|cmn|钱袋|tr=qiándài|sc=Hani}}, {{t|cmn|錢袋子|sc=Hani}}, {{t|cmn|钱袋子|tr=qiándàizi|sc=Hani}}
 * Finnish: {{t|fi|rahasäkki}}, {{t+|fi|rahapussi}}
-* Galician: {{t|gl|correo|m}} {{qualifier|archaic}}, {{t|gl|taleigo|m}} {{qualifier|dated}}, {{t|gl|peto|m}}
+* Galician: {{t|gl|correo|m}} {{qualifier|archaic}}, {{t|gl|taleigo|m}} {{qualifier|dated}}, {{t|gl|peto|m}}, {{t+|gl|faldriqueira|f}}
 {{trans-mid}}
 * Irish: {{t|ga|mála airgid|m}}
 * Latin: {{t|la|pasceolus|m}}
