--- a/en/d/dikes.746895.wikitext
+++ b/en/d/dikes.746895.wikitext
@@ -4,6 +4,7 @@
 {{head|en|noun form}}
 
 # {{plural of|en|dike}}
+# {{label|en|electricity|US|slang}} Diagonal pliers.
 
 ===Anagrams===
 * {{anagrams|en|a=deiks|siked|skied}}
