--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -4,7 +4,7 @@
 [[File:Ambroise Thomas 2.jpg|thumb|right|Composer Ambroise Thomas with hand on chin (1).]]
 
 ===Pronunciation===
-* {{enPR|chĭn}}, {{IPA|en|/tʃɪn/}}
+* {{enPR|chĭn}}, {{IPA|en|/t͡ʃɪn/}}
 * {{audio|en|en-us-chin.ogg|Audio (US)}}
 * {{rhymes|en|ɪn|s=1}}
 
