--- a/en/o/oomycete.801875.wikitext
+++ b/en/o/oomycete.801875.wikitext
@@ -1,6 +1,12 @@
+{{also|oömycete}}
 ==English==
+
+===Alternative forms===
+* {{l|en|oömycete}} {{q|rare}}
+
 ===Etymology===
 {{com|en|oo-|-mycete|}}
+
 ===Noun===
 {{wikipedia}}
 {{en-noun}}
