/* Translations */ correcting Mandarin translation <cop#67168979>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -106,7 +106,7 @@ Short for {{m|en|copper||police officer}}, itself from the verb {{m|en|cop|t=to 
 * Catalan: {{t+|ca|bòfia|f}}
 * Cherokee: {{t|chr|ᏗᏓᏂᏱᏍᎩ}}
 * Chinese:
-*: Mandarin: {{t+|cmn|条子|tr=tiáozǐ |sc=Hani}}
+*: Mandarin: {{t+|cmn|條子|sc=Hani}}, {{t+|cmn|条子|tr=tiáozi|sc=Hani}}
 * Czech: {{t+|cs|polda|m}}, {{t+|cs|policajt|m}}, {{t+|cs|bachař|m}}
 * Danish: {{t|da|panser|c}}, {{t|da|strisser|c}}, {{t|da|strømer|c}}
 * Dutch: {{t+|nl|diender|m}}, {{t+|nl|flik|m}}, {{t+|nl|smeris|m}}
