--- a/en/m/monition.720241.wikitext
+++ b/en/m/monition.720241.wikitext
@@ -58,3 +58,10 @@ From {{etyl|xno|en}} {{m|fro|monicion}}, {{etyl|frm|en}} {{m|frm|monicion}}, and
 {{trans-mid}}
 * Bulgarian: {{t+|bg|поличба|f}}
 {{trans-bottom}}
+----
+==French==
+
+===Noun===
+{{fr-noun|f}}
+
+# {{l|en|monition}}
