t+scn:[[isulari]] ([[WT:EDIT|Assisted]]) <island#67185613>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -505,6 +505,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 *: Nynorsk: {{t-needed|nn}}
 * Portuguese: {{t+|pt|isolar}}
 * Russian: {{t+|ru|изоли́ровать}}, {{t+|ru|отделя́ть|impf}}, {{t+|ru|отдели́ть|pf}}, {{t+|ru|обособля́ть|impf}}, {{t+|ru|обосо́бить|pf}}
+* Sicilian: {{t|scn|isulari}}
 {{trans-bottom}}
 
 ===See also===
