--- a/en/s/synchrocyclotron.742248.wikitext
+++ b/en/s/synchrocyclotron.742248.wikitext
@@ -20,3 +20,10 @@
 * Polish: {{t|pl|synchrocyklotron|m}}
 * Spanish: {{t|es|sincrociclotrón|m}}
 {{trans-bottom}}
+----
+==French==
+
+===Noun===
+{{fr-noun|m}}
+
+# {{l|en|synchrocyclotron}}
