--- a/en/a/ADP.26251.wikitext
+++ b/en/a/ADP.26251.wikitext
@@ -1,3 +1,12 @@
+==Translingual==
+
+===Symbol===
+{{mul-symbol}}
+
+# {{IATA|Ampara Airport||Ampara||Eastern Province, Sri Lanka|Eastern Province|Sri Lanka}}
+
+----
+
 ==English==
 
 ===Noun===
