/* Suffix */correct language code in {{suffixusex}} using [[Project:AWB|AWB]] <-ica#67196638>

--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -63,9 +63,9 @@ Borrowed from {{bor|ia|en|-ics}}, {{bor|ia|fr|-ique}}, {{bor|ia|it|-ica}}, {{bor
 {{ia-suffix|n}}
 
 # {{ngd|forms nouns from nouns, denoting a science of study}}; [[-ics]]
-#: {{suffixusex|io|electron|t1=electron|electronica|t2=electronics}}
-#: {{suffixusex|io|phonema|t1=phoneme|phonemica|t2=phonemics}}
-#: {{suffixusex|io|gymnasta|t1=gymnast|gymnastica|t2=gymnastics}}
+#: {{suffixusex|ia|electron|t1=electron|electronica|t2=electronics}}
+#: {{suffixusex|ia|phonema|t1=phoneme|phonemica|t2=phonemics}}
+#: {{suffixusex|ia|gymnasta|t1=gymnast|gymnastica|t2=gymnastics}}
 
 ====Usage notes====
 * The stressed syllable in words formed with {{l|ia|-ica}} is the antepenult, i.e. the syllable prior to the suffix.
