--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -3,10 +3,10 @@
 
 ===Etymology 1===
 
-====Symbol====
-{{head|mul|symbol}}
+===Symbol===
+{{mul-symbol}}
 
-# The [[ISO]] 3166-1 two-letter (alpha-2) code for [[Democratic Republic of the Congo]].
+# {{ISO 3166|1|2|Democratic Republic of the Congo}}
 
 ===Etymology 2===
 
@@ -14,8 +14,6 @@
 {{head|mul|noun}}
 
 # [[corps diplomatique]], [[diplomatic corps]] {{gloss|collective body of foreign diplomats accredited to a particular country or body}}
-
-[[Category:ISO 3166-1]]
 
 ----
 
