t+kk:[[байланыстыру]] ([[WT:EDIT|Assisted]]) <bind#67204767>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -177,6 +177,7 @@ Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdr
 {{trans-mid}}
 * Italian: {{t+|it|legare}}
 * Japanese: {{t+|ja|繋ぐ|tr=[[つなぐ]], tsunagu}}, {{t+|ja|繋げる|tr=[[つなげる]], tsunageru}}, {{t|ja|縛る|tr=しばる, shibaru}}, {{t+|ja|結ぶ|tr=むすぶ, musubu}}
+* Kazakh: {{t|kk|байланыстыру}}
 * Latin: {{t|la|cōnectō}}, {{t+|la|iungō}}, {{t|la|nectō}}, {{t+|la|teneo}}
 * North Frisian:
 *: Föhr-Amrum: {{t|frr|ferbinj}}
