--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -35,81 +35,78 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 ** If used with a singular countable noun or an uncountable noun, it needs to take a singular verb.
 
 ====Derived terms====
-{{rel-top3|Terms derived from ''fraction'' (noun)}}
-* {{l|en|common fraction}}
-* {{l|en|complex fraction}}
-* {{l|en|decimal fraction}}
-* {{l|en|Egyptian fraction}}
-* {{l|en|field of fractions}}
-* {{l|en|fraction bar}}
-* {{l|en|fraction slash}}
-* {{l|en|fractional calculus}}
-* {{l|en|fractional distillation}}
-* {{l|en|fractional ideal}}
-* {{l|en|fractional reserve banking}}
-{{rel-mid3}}
-* {{l|en|fractionner}}
-* {{l|en|fractionize}}
-* {{l|en|fractionization}}
-* {{l|en|fractionate}}
-* {{l|en|fractionator}}
-* {{l|en|fractionation}}
-* {{l|en|fractional}}
-* {{l|en|fractionally}}
-* {{l|en|fractionality}}
-* {{l|en|fractionalize}}
-* {{l|en|fractionalizing}}
-* {{l|en|fractionalization}}
-* {{l|en|fractionalism}}
-* {{l|en|fractionalist}}
-* {{l|en|improper fraction}}
-* {{l|en|ordinal fraction}}
-* {{l|en|partial fraction decomposition}}
-* {{l|en|partial fraction expansion}}
-{{rel-mid3}}
-* {{l|en|proper fraction}}
-* {{l|en|simple fraction}}
-* {{l|en|total ring of fractions}}
-* {{l|en|unit fraction}}
-* {{l|en|vulgar fraction}}
-{{rel-bottom}}
+
+{{der3|en
+|common fraction
+|complex fraction
+|decimal fraction
+|Egyptian fraction
+|field of fractions
+|fraction bar
+|fraction slash
+|fractional calculus
+|fractional distillation
+|fractional ideal
+|fractional reserve banking
+|fractionner
+|fractionize
+|fractionization
+|fractionate
+|fractionator
+|fractionation
+|fractional
+|fractionally
+|fractionality
+|fractionalize
+|fractionalizing
+|fractionalization
+|fractionalism
+|fractionalist
+|improper fraction
+|ordinal fraction
+|partial fraction decomposition
+|partial fraction expansion
+|proper fraction
+|simple fraction
+|total ring of fractions
+|unit fraction
+|vulgar fraction
+}}
 
 ====Related terms====
-{{rel-top3|Terms etymologically related to ''fraction''}}
-* {{l|en|fractal}}
-* {{l|en|fractious}}
-* {{l|en|fracture}}
-* {{l|en|fragment}}
-* {{l|en|frail}}
-* {{l|en|frailty}}
-* {{l|en|frailness}}
-* {{l|en|fragile}}
-* {{l|en|fragility}}
-* {{l|en|fragileness}}
-* {{l|en|frangible}}
-* {{l|en|frangibility}}
-* {{l|en|frangibleness}}
-{{rel-mid3}}
-* {{l|en|refract}}
-* {{l|en|refractive}}
-* {{l|en|refraction}}
-* {{l|en|refractory}}
-* {{l|en|refrangible}}
-* {{l|en|refringent}}
-{{rel-mid3}}
-* {{l|en|infract}}
-* {{l|en|infraction}}
-* {{l|en|infringe}}
-* {{l|en|infringer}}
-* {{l|en|infringee}}
-* {{l|en|infringement}}
-* {{l|en|noninfringement}}
-* {{l|en|infringeable}}
-* {{l|en|infringest}}
-* {{l|en|infrangible}}
-* {{l|en|infrangibility}}
-* {{l|en|infrangibleness}}
-{{rel-bottom}}
+{{rel3|en
+|fractal
+|fractious
+|fracture
+|fragment
+|frail
+|frailty
+|frailness
+|fragile
+|fragility
+|fragileness
+|frangible
+|frangibility
+|frangibleness
+|refract
+|refractive
+|refraction
+|refractory
+|refrangible
+|refringent
+|infract
+|infraction
+|infringe
+|infringer
+|infringee
+|infringement
+|noninfringement
+|infringeable
+|infringest
+|infrangible
+|infrangibility
+|infrangibleness
+}}
 
 ====Translations====
 {{trans-top|part of a whole}}
@@ -267,6 +264,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * {{R:Dictionary.com|fraction}}
 * {{R:American Heritage 2000|fraction}}
 * {{R:WordNet 2003|fraction}}
+* {{R:Century 1911}}
 
 ===Anagrams===
 * {{anagrams|en|a=acfinort|Croftian|factor in|infocrat}}
