--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -20,11 +20,10 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 # {{lb|en|chemistry}} A [[component]] of a [[mixture]], separated by [[fractionation]].
 # In a [[eucharistic]] [[service]], the breaking of the [[host#Noun_3|host]].
 # A small amount.
-#* {{RQ:Churchill Celebrity|chapter=2|passage=I had occasion […] to make a somewhat long business trip to Chicago, and on my return […] I found Farrar awaiting me in the railway station. He smiled his wonted '''fraction''' by way of greeting, […], and finally leading me to his buggy, turned and drove out of town.}}
+#* {{RQ:Churchill Celebrity|chapter=2|passage=I had occasion {{...}} to make a somewhat long business trip to Chicago, and on my return {{...}} I found Farrar awaiting me in the railway station. He smiled his wonted '''fraction''' by way of greeting, {{...}}, and finally leading me to his buggy, turned and drove out of town.}}
 #* {{quote-journal|en|date=January 29, 2011|author=Chris Bevan| work=BBC| title=[http://news.bbc.co.uk/sport2/hi/football/fa_cup/9379079.stm Torquay 0-1 Crawley Town]| passage=After kick-off was delayed because of crowd congestion, Torquay went closest to scoring in a cagey opening 30 minutes, when Danny Stevens saw a fierce shot from the edge of the area swerve a '''fraction''' wide.}}
-# The act of breaking, or state of being broken, especially by violence.
-#* {{RQ:Foxe Martyrs}}
-#*: Neither can the natural body of Christ be subject to any '''fraction''' or breaking.
+# {{lb|en|archaic}} The act of [[breaking]], or state of being broken, especially by [[violence]].
+#* {{RQ:Foxe Martyrs|passage=Neither can the natural body of Christ be subject to any '''fraction''' or breaking.}}
 
 ====Quotations====
 * {{seeCites|en}}
