--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -361,6 +361,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 ====Translations====
 {{trans-top|to rise up in bubbles}}
 * Bulgarian: {{t+|bg|кипя}}, {{t+|bg|клокоча}}
+* Catalan: {{t+|ca|bombollejar}}
 * Danish: {{t+|da|boble}}
 * Esperanto: {{t|eo|bobeli}}
 * Finnish: {{t+|fi|kuplia}}, {{t|fi|poreilla}}, {{t|fi|porista}}
